--- a/styles/base.css
+++ b/styles/base.css
@@ -3,13 +3,13 @@
 }
 
 body{
-    background-color: var(--bg-color);
+    background-color: var(--color-secondary);
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-body,h1,h2,h3,h4,h5,h6{
+body, h1, h2, h3, h4, h5, h6{
     margin: 0;
 }
 
