--- a/styles/components/list-products.css
+++ b/styles/components/list-products.css
@@ -1,4 +1,4 @@
-#box__listProducts{
+.box__product-list{
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -6,9 +6,9 @@
     row-gap: 16px;
 }
 
-.note{
+.product-list__note{
     width: 80%;
-    color: var(--clr-primary);
+    color: var(--color-primary);
     padding: 16px;
     border-radius: 16px;
     display: flex;
@@ -16,15 +16,19 @@
     border-bottom: 1px solid yellow;
 }
 
-.style_count_products{
+.product-list__note_bg-dark{
+    background-color: var(--color-darker);
+}
+
+.note__count-products{
     background-color: yellow;
-    color: var(--clr-secondary);
+    color: var(--color-secondary);
     font-weight: 700;
     border-radius: 6px;
     padding: 6px;
     margin-right: 16px;
 }
 
-.styleTextName{
-    font-size: 1.2em;
+.note__product-name{
+    font-size: var(--font-size);
 }
